[package]
name = "dllinjector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "testdll"

[dependencies.windows]
version = "0.43.0"
features = [
  "Foundation",
  "Win32_Security",
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Memory",
  "Win32_System_Console",
  "Win32_System_Threading",
  "Win32_System_LibraryLoader",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_UI_Shell"
]
